--- a/index.html
+++ b/index.html
@@ -44,13 +44,21 @@
   </header>
   <main>
     <section class="section-top">
-      <div class="section-top__layout">
+      <div class="section-top__layout" style="
+    width: 1600px;">
         <h1 class="section-top__header">EFEKTYWNE ROZWIĄZANIA
           <span class="section-top__header">
             DLA WASZEGO BIZNESU
           </span>
         </h1>
-        <button class="button button--color-main" type="button" data-modal-open>Zamów usługę</button>
+        <button class="button button--color-main" type="button" data-modal-open="">Zamów usługę</button>
+      </div>>
+      <h1 class="section-top__header">EFEKTYWNE ROZWIĄZANIA
+        <span class="section-top__header">
+          DLA WASZEGO BIZNESU
+        </span>
+      </h1>
+      <button class="button button--color-main" type="button" data-modal-open>Zamów usługę</button>
       </div>
     </section>
     <section class="section">
